--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <p>
-    xfdck
+    hi welcome to my blog entirely written in html
   </p>
+  <p>
+    here's a div
+  </p>
+  <div></div>
 </html>
